Z-Index fixes, increased nav button padding, more button styling

--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,6 @@ html {
   border-radius:0.12em;
   box-sizing: border-box;
   text-decoration:none;
-  font-family:'Roboto',sans-serif;
   font-weight:300;
   color: white;
   background-color: #ff5757;
